# personal-assistant

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  start.sh
app/: assistant.py  calendar_client.py  config.py  database.py  log_bot.py  main.py  openai_client.py  profile_client.py  scheduler.py  schemas.py  telegram_bot.py  utils.py  voice.py
